--- a/PIM/PIM.Web/Resources/Resource.zh.resx
+++ b/PIM/PIM.Web/Resources/Resource.zh.resx
@@ -117,10 +117,83 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Project Information Management" xml:space="preserve">
-    <value />
+  <data name="Cancel" xml:space="preserve">
+    <value>取消</value>
   </data>
-  <data name="Project List" xml:space="preserve">
-    <value />
+  <data name="ConfirmDelete" xml:space="preserve">
+    <value>確認刪除</value>
+  </data>
+  <data name="CreateProject" xml:space="preserve">
+    <value>建立</value>
+  </data>
+  <data name="Customer" xml:space="preserve">
+    <value>顧客</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>刪除</value>
+  </data>
+  <data name="delete_modal_body" xml:space="preserve">
+    <value>您確定要刪除所選項目嗎？</value>
+  </data>
+  <data name="delete_selected_item" xml:space="preserve">
+    <value>刪除所選項目</value>
+  </data>
+  <data name="EditProject" xml:space="preserve">
+    <value>編輯</value>
+  </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>結束日期</value>
+  </data>
+  <data name="Group" xml:space="preserve">
+    <value>班組</value>
+  </data>
+  <data name="Members" xml:space="preserve">
+    <value>成員</value>
+  </data>
+  <data name="NewProject" xml:space="preserve">
+    <value>新項目</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>取消</value>
+  </data>
+  <data name="NoProjectMessage" xml:space="preserve">
+    <value>我們還沒有任何項目</value>
+  </data>
+  <data name="No_item_selected" xml:space="preserve">
+    <value>未選擇任何項目</value>
+  </data>
+  <data name="Number" xml:space="preserve">
+    <value>項目編號</value>
+  </data>
+  <data name="ProjectInformationManagement" xml:space="preserve">
+    <value>項目資料
+管理</value>
+  </data>
+  <data name="ProjectList" xml:space="preserve">
+    <value>項目編目</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>項目名</value>
+  </data>
+  <data name="ResetSearch" xml:space="preserve">
+    <value>重置</value>
+  </data>
+  <data name="SearchProject" xml:space="preserve">
+    <value>搜索</value>
+  </data>
+  <data name="SearchTextBox" xml:space="preserve">
+    <value>項目編號，項目名稱或客戶名稱</value>
+  </data>
+  <data name="SelectStatus" xml:space="preserve">
+    <value>選擇狀態</value>
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value>開始日期</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>狀態</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>確認</value>
   </data>
 </root>
